# EEG_Assesment_Sys

./: README.md  pyproject.toml
eeg_quick_assess/: __init__.py  cli.py  pipeline.py
eeg_quick_assess/configs/: runtime.yaml  scoring_rules.yaml  sentence_bank.yaml
eeg_quick_assess/features/: bandpower.py  entropy.py  laterality.py  psd.py  ratios.py  stability.py
eeg_quick_assess/io/: edf_reader.py  numpy_reader.py
eeg_quick_assess/preprocess/: filters.py  reref.py  segment.py
eeg_quick_assess/qc/: artifact_flags.py  qc_metrics.py
eeg_quick_assess/report/: llm_backend.py  llm_prompt.py  summarizer.py  templates.py
eeg_quick_assess/scoring/: normalize.py  schema.py  score_engine.py
examples/: demo_run_edf.py  demo_run_numpy.py  sample_output.json
tests/: test_features.py  test_llm_fallback.py  test_schema.py  test_scoring.py
